Budegt Cache data done and Apprval Page and Reject Page Bug fixed

--- a/KGERP/Views/BillRequisition/DirectorBRRejectSlave.cshtml
+++ b/KGERP/Views/BillRequisition/DirectorBRRejectSlave.cshtml
@@ -155,7 +155,7 @@
                         }
                     </div>
 
-                    @if (Model.BillRequisitionMasterId > 0 && Model.StatusId != EnumBillRequisitionStatus.Approved)
+                    @if (Model.BillRequisitionMasterId > 0 && Model.StatusId != EnumBillRequisitionStatus.Approved && Model.StatusId != EnumBillRequisitionStatus.Rejected)
                     {
                         <div class="box-footer">
 
