--- a/KGERP/Views/BillRequisition/PMBRRejectSlave.cshtml
+++ b/KGERP/Views/BillRequisition/PMBRRejectSlave.cshtml
@@ -155,7 +155,7 @@
                         }
                     </div>
 
-                    @if (Model.BillRequisitionMasterId > 0 && Model.StatusId != EnumBillRequisitionStatus.Rejected)
+                    @if (Model.BillRequisitionMasterId > 0 && Model.StatusId != EnumBillRequisitionStatus.Rejected && Model.StatusId != EnumBillRequisitionStatus.Rejected)
                     {
                         <div class="box-footer">
 
