--- a/KGERP/Views/BillRequisition/MDBRRejectSlave.cshtml
+++ b/KGERP/Views/BillRequisition/MDBRRejectSlave.cshtml
@@ -156,7 +156,7 @@
                         }
                     </div>
 
-                    @if (Model.BillRequisitionMasterId > 0 && Model.StatusId != EnumBillRequisitionStatus.Approved)
+                    @if (Model.BillRequisitionMasterId > 0 && Model.StatusId != EnumBillRequisitionStatus.Approved && Model.StatusId != EnumBillRequisitionStatus.Rejected)
                     {
                         <div class="box-footer">
 
